<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_fb"
    android:orientation="vertical"
    tools:context=".ui.community.AddDynamicActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/gray_fb"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/picture_cancel"
            android:textColor="@color/text_green"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/add_dynamic"
            android:textColor="@color/gray_33"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/gray_99" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_db" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/hint_dyanmic"
        android:padding="10dp"
        android:textColor="@color/gray_4a"
        android:textColorHint="@color/gray_99"
        android:textSize="14sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" />
</LinearLayout>