<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.alarm.AddAlarmActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_label"
                android:timePickerMode="spinner" />


            <LinearLayout
                android:id="@+id/ll_repeat"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_label"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repeat"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_repeat_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="只响一次"
                    android:textColor="#999999"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_action_go" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_voice"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_label"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/voice"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_voice_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="两只老虎"
                    android:textColor="#999999"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_action_go" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_game"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_label"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/over_game"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_game_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="愤怒的小鸟"
                    android:textColor="#999999"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_action_go" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_label"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textColor="#666666"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_note_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:text="0/50"
                    android:textColor="#888888"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/et_note"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:textColor="#666666"
                    android:textSize="14sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_delete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/gray_f7"
                android:text="@string/delete"
                android:textColor="@color/btn_red_right"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:visibility="gone" />

    <include layout="@layout/include_tool_bar" />
</RelativeLayout>